--- a/deployment/VL.DollarsMoCap.nuspec
+++ b/deployment/VL.DollarsMoCap.nuspec
@@ -10,8 +10,11 @@
     <repository type="git" url="https://github.com/vvvv/VL.DollarsMoCap.git" />
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Support for skeleton, finger and face tracking by Dollars MoCap</description>
-    <tags>VL, skeleton, fingers, hand, face, tracking, blendshapes</tags>
+    <tags></tags>
     <license type="expression">LGPL-3.0-only</license>
+    <dependencies>
+        <dependency id="VL.Skeleton" version="0.0.2-alpha" />
+    </dependencies>
     <icon>icon\nugeticon.png</icon>
     <readme>docs\README.md</readme>
   </metadata>
